0.9.12
Change overrides for custom node hubs to default items (to allow setting normal library paths)
Prevent pressing left if no submenu on vertical home.

0.9.11
Add widget sort methods
Revert horizontal menu to Aura style spacing

0.9.10
Rewrite widget code for better handling

0.9.9
Fix for programs menu
Scrolling for horizontal menu (no limit on number of items)
Some tweaks to horizontal menu (still not perfect)

0.9.8
Fix for addonbrowser top menu

0.9.7
Square theme support

0.9.6
Fix trailers button
Fix list views for sets

0.9.5
Fix for submenu widgets on v1.0.17 of skinshortcuts
Fix for menu items positioning

0.9.4
Fix for square list where content is files and window is not MyVideoNav

0.9.3
Fix for startup playlist

0.9.2
Single widgets in multiwidget now show info when unfocused
Multi widgets show fanart when unfocused

0.9.1
Alpha Release