@@ -3,62 +3,46 @@
 <window id="136">
     <controls>
         <control type="group">
-            <visible>!Skin.HasSetting(MinimalBusyLoader) | Window.IsVisible(Startup.xml)</visible>
+            <visible>!Skin.HasSetting(MinimalBusyLoader) | Window.IsVisible(Startup.xml) | Window.IsVisible(fullscreenvideo) | Window.IsVisible(visualisation)</visible>
             <visible>!Window.IsVisible(DialogConfirm.xml)</visible>
-            <visible>!Skin.HasSetting(hide.busydialog)</visible>
             <include>Animation_FadeIn</include>
             <include>Animation_FadeOut</include>
             <include>Global_Overlay</include>
             <include>Global_Overlay</include>
             <include>Defs_BusySpinner</include>
         </control>
-        <control type="image">
-            <include>Defs_ShadowBack_Fullscreen</include>
-            <visible>Skin.HasSetting(MinimalBusyLoader)</visible>
-        </control>
+        
         <control type="group">
-            <height>view_top</height>
-            <control type="group">
-                <visible>Skin.HasSetting(MinimalBusyLoader) + !Window.IsVisible(DialogNotification.xml) + [!Window.IsVisible(DialogVolumeBar.xml) | Player.Muted] + !Window.IsVisible(Startup.xml)</visible>
-                <include>Dialog_Notification_Group</include>
-                <control type="group">
-                    <control type="group">
-                        <include>Dialog_Notification_Icon</include>
-                        <control type="image">
-                            <description>Busy animation</description>
-                            <centerleft>50%</centerleft>
-                            <centertop>50%</centertop>
-                            <width>100</width>
-                            <height>100</height>
-                            <texture>dialog/loading-back.png</texture>
-                            <aspectratio>keep</aspectratio>
-                        </control>
-                        <control type="group">
-                            <description>Busy animation</description>
-                            <centerleft>50%</centerleft>
-                            <centertop>50%</centertop>
-                            <width>100</width>
-                            <height>100</height>
-                            <animation effect="rotate" condition="true" start="0" end="360" loop="true" time="1000" center="auto">Conditional</animation>
-                            <control type="image">
-                                <texture colordiffuse="$VAR[ColorHighlight]">dialog/loading-spinner.png</texture>
-                                <aspectratio>keep</aspectratio>
-                            </control>
-                        </control>
-                    </control>
+            <visible>Skin.HasSetting(MinimalBusyLoader)</visible>
+            <visible>!Window.IsVisible(DialogConfirm.xml)</visible>
+            <visible>!Window.IsVisible(DialogNotification.xml)</visible>
+            <visible>!Window.IsVisible(fullscreenvideo)</visible>
+            <visible>!Window.IsVisible(visualisation)</visible>
+            <visible>!Window.IsVisible(Startup.xml)</visible>
+            <visible>!Window.IsVisible(Home.xml) | [Control.HasFocus(302) | Control.HasFocus(5610)]</visible>
 
-                    <control type="label">
-                        <label>$LOCALIZE[31292]</label>
-                        <include>Dialog_Notification_SubLabel</include>
-                    </control>
-                    <control type="label">
-                        <label>$LOCALIZE[20186]...</label>
-                        <include>Dialog_Notification_MainLabel</include>
-                    </control>
+            <control type="group">
+                <description>Busy animation</description>
+                <left>view_pad</left>
+                <control type="image">
+                    <animation effect="rotate" condition="true" start="0" end="360" loop="true" time="1000" center="auto">Conditional</animation>
+                    <left>-96</left>
+                    <centertop>50%</centertop>
+                    <width>80</width>
+                    <height>80</height>
+                    <texture colordiffuse="$VAR[ColorHighlight]">dialog/loading-spinner.png</texture>
+                    <aspectratio>keep</aspectratio>
                 </control>
             </control>
-        </control>
 
+            <include condition="![Window.IsVisible(SkinSettings.xml) | Window.IsVisible(SettingsCategory.xml) | Window.IsVisible(SettingsProfile.xml) | Window.IsVisible(SettingsSystemInfo.xml)]" content="Dialog_Notification_Group">
+                <param name="label" value="$LOCALIZE[20186]..." />
+            </include>
+            <include content="Dialog_Notification_Group" condition="[Window.IsVisible(SkinSettings.xml) | Window.IsVisible(SettingsCategory.xml) | Window.IsVisible(SettingsProfile.xml) | Window.IsVisible(SettingsSystemInfo.xml)]">
+                <param name="fgcolor" value="panel_fg" />
+                <param name="label" value="$LOCALIZE[20186]..." />
+            </include>
+        </control>
     </controls>
 
 </window>
