@@ -154,7 +154,6 @@
                 <aspectratio align="center" aligny="center">keep</aspectratio>
                 <texture>dialog/loading-back.png</texture>
                 <colordiffuse>$PARAM[fgcolor]_70</colordiffuse>
-                <!-- <visible>[Window.IsVisible(DialogExtendedProgressBar.xml) + Control.IsVisible(32)] | $PARAM[nowplaying]</visible> -->
             </control>
             <control type="image">
                 <left>-16</left>
