@@ -370,6 +370,19 @@
                         <height>24</height>
                         <visible>Control.HasFocus($PARAM[id]) | Control.HasFocus($PARAM[altid])</visible>
                         <visible>Integer.IsGreater(Container($PARAM[id]).NumItems,0) + !Container($PARAM[id]).IsUpdating</visible>
+                        <visible>!String.IsEqual(Container($PARAM[id]).ListItem.DBType,episode)</visible>
+                    </control>
+                    <control type="label">
+                        <top>20</top>
+                        <width>auto</width>
+                        <label>$INFO[Container($PARAM[id]).ListItem.TvShowTitle,, - ]$INFO[Container($PARAM[id]).ListItem.Label]</label>
+                        <aligny>center</aligny>
+                        <textcolor>main_fg_100</textcolor>
+                        <font>font_tiny</font>
+                        <height>24</height>
+                        <visible>Control.HasFocus($PARAM[id]) | Control.HasFocus($PARAM[altid])</visible>
+                        <visible>Integer.IsGreater(Container($PARAM[id]).NumItems,0) + !Container($PARAM[id]).IsUpdating</visible>
+                        <visible>String.IsEqual(Container($PARAM[id]).ListItem.DBType,episode)</visible>
                     </control>
                 </control>
             </control>
@@ -812,8 +825,8 @@
         <definition>
             <control type="group">
                 <animation type="Focus" condition="$PARAM[focusbounce]">
-                    <effect type="zoom" start="90" end="100" time="150" tween="sine" easing="inout" center="auto" />
-                    <effect type="fade" start="0" end="100" time="150" tween="sine" easing="in" />
+                    <effect type="zoom" start="90" end="100" delay="0" time="150" tween="sine" easing="inout" center="auto" />
+                    <effect type="fade" start="0" end="100" delay="0" time="150" tween="sine" easing="in" />
                 </animation>
                 <animation type="Unfocus" condition="$PARAM[focusbounce]">
                     <effect type="zoom" start="100" end="90" time="150" tween="sine" easing="inout" center="auto" />
