@@ -1,6 +1,7 @@
 0.9.12
 Change overrides for custom node hubs to default items (to allow setting normal library paths)
 Prevent pressing left if no submenu on vertical home.
+Minimal busy loader option
 
 0.9.11
 Add widget sort methods
